# news-notify-app

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  api.py  app.py  deploy.sh  pyproject.toml  requirements.txt  template.yaml
.github/workflows/: test.yml
app/: app.py  requirements.txt
scripts/: setup_hooks.py  test.py
tests/: test_api.py
