[project]
name = "news-notify-app"
version = "0.1.0"
description = "News aggregation and notification application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "apscheduler>=3.10.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
app = "app:run_scheduler"
app-once = "app:run_once"
api = "api:run_api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []